--- a/src/main/webapp/css/ebelle-responsive.css
+++ b/src/main/webapp/css/ebelle-responsive.css
@@ -112,6 +112,11 @@ table form{
   height:100%;
   max-height:100%;
  }
+
+ .img-circle {
+    border-radius: 50%;
+  }
+  
  .delete-button{
     background-image: url("/images/delete.png");
     background-repeat: no-repeat;
